--- a/C++/OpenGL_Tetris/.project
+++ b/C++/OpenGL_Tetris/.project
@@ -3,6 +3,7 @@
 	<name>OpenGL_Tetris</name>
 	<comment></comment>
 	<projects>
+		<project>OpenGLCppCommon</project>
 		<project>SimonCppLibrary</project>
 	</projects>
 	<buildSpec>
