--- a/C++/OpenGL_Test_Project/.cproject
+++ b/C++/OpenGL_Test_Project/.cproject
@@ -23,12 +23,12 @@
 							<tool id="cdt.managedbuild.tool.gnu.archiver.mingw.base.599237844" name="GCC Archiver" superClass="cdt.managedbuild.tool.gnu.archiver.mingw.base"/>
 							<tool id="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base.1737876643" name="GCC C++ Compiler" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.mingw.base">
 								<option id="gnu.cpp.compiler.option.include.paths.2117004905" name="Include paths (-I)" superClass="gnu.cpp.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glew-1.13.0\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glew-2.0.0\include&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:\Simon\Dropbox\Code\C++\SimonCppLibrary\Debug\include&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2-2.0.3\include\SDL2&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SOIL\src&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glm&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\assimp-3.1.1\include&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2-2.0.5\x86_64-w64-mingw32\include\SDL2&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2_image-2.0.1&quot;"/>
 								</option>
 								<option id="gnu.cpp.compiler.option.optimization.level.1222263978" name="Optimization Level" superClass="gnu.cpp.compiler.option.optimization.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.optimization.level.none" valueType="enumerated"/>
 								<option id="gnu.cpp.compiler.option.debugging.level.2104281545" name="Debug Level" superClass="gnu.cpp.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.cpp.compiler.debugging.level.max" valueType="enumerated"/>
@@ -45,7 +45,6 @@
 								<option id="gnu.cpp.link.option.libs.1949298630" name="Libraries (-l)" superClass="gnu.cpp.link.option.libs" valueType="libs">
 									<listOptionValue builtIn="false" value="mingw32"/>
 									<listOptionValue builtIn="false" value="SimonCppLibrary"/>
-									<listOptionValue builtIn="false" value="SOIL"/>
 									<listOptionValue builtIn="false" value="opengl32"/>
 									<listOptionValue builtIn="false" value="glew32"/>
 									<listOptionValue builtIn="false" value="SDL2main"/>
@@ -54,11 +53,11 @@
 									<listOptionValue builtIn="false" value="assimp"/>
 								</option>
 								<option id="gnu.cpp.link.option.paths.956761394" name="Library search path (-L)" superClass="gnu.cpp.link.option.paths" valueType="libPaths">
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2-2.0.3\lib&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;D:\Simon\Dropbox\Code\C++\SimonCppLibrary\Debug\lib&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glew-1.13.0\lib&quot;"/>
-									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SOIL\lib&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\assimp-3.1.1\lib64&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glew-2.0.0\lib&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2-2.0.5\x86_64-w64-mingw32\lib&quot;"/>
+									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2_image-2.0.1\lib&quot;"/>
 								</option>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.linker.input.896995493" superClass="cdt.managedbuild.tool.gnu.cpp.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)"/>
@@ -155,4 +154,5 @@
 			<autodiscovery enabled="true" problemReportingEnabled="true" selectedProfileId=""/>
 		</scannerConfigBuildInfo>
 	</storageModule>
+	<storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
 </cproject>
