--- a/C++/OpenGLCppCommon/.cproject
+++ b/C++/OpenGLCppCommon/.cproject
@@ -17,7 +17,7 @@
 				</extensions>
 			</storageModule>
 			<storageModule moduleId="cdtBuildSystem" version="4.0.0">
-				<configuration artifactExtension="a" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.staticLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.staticLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.mingw.lib.debug.944365916" name="Debug" parent="cdt.managedbuild.config.gnu.mingw.lib.debug" postbuildStep="cmd /c if not exist include md include; cmd /c if not exist lib md lib; cmd /c copy ..\src\*.hpp include\;cmd /c copy lib${ProjName}.a lib\;">
+				<configuration artifactExtension="a" artifactName="${ProjName}" buildArtefactType="org.eclipse.cdt.build.core.buildArtefactType.staticLib" buildProperties="org.eclipse.cdt.build.core.buildArtefactType=org.eclipse.cdt.build.core.buildArtefactType.staticLib,org.eclipse.cdt.build.core.buildType=org.eclipse.cdt.build.core.buildType.debug" cleanCommand="rm -rf" description="" id="cdt.managedbuild.config.gnu.mingw.lib.debug.944365916" name="Debug" parent="cdt.managedbuild.config.gnu.mingw.lib.debug" postbuildStep="cmd /c if not exist include md include; cmd /c if not exist lib md lib; cmd /c copy ..\src\*.hpp include\; cmd /c copy ..\src\*.h include\;cmd /c copy lib${ProjName}.a lib\;">
 					<folderInfo id="cdt.managedbuild.config.gnu.mingw.lib.debug.944365916." name="/" resourcePath="">
 						<toolChain id="cdt.managedbuild.toolchain.gnu.mingw.lib.debug.646471327" name="MinGW GCC" superClass="cdt.managedbuild.toolchain.gnu.mingw.lib.debug">
 							<targetPlatform id="cdt.managedbuild.target.gnu.platform.mingw.lib.debug.211412504" name="Debug Platform" superClass="cdt.managedbuild.target.gnu.platform.mingw.lib.debug"/>
@@ -34,7 +34,7 @@
 									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\SDL2-2.0.5\x86_64-w64-mingw32\include\SDL2&quot;"/>
 									<listOptionValue builtIn="false" value="&quot;C:\MinGW\external\glew-2.0.0\include&quot;"/>
 								</option>
-								<option id="gnu.cpp.compiler.option.dialect.std.752996310" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++1y" valueType="enumerated"/>
+								<option id="gnu.cpp.compiler.option.dialect.std.752996310" name="Language standard" superClass="gnu.cpp.compiler.option.dialect.std" useByScannerDiscovery="true" value="gnu.cpp.compiler.dialect.c++1y" valueType="enumerated"/>
 								<inputType id="cdt.managedbuild.tool.gnu.cpp.compiler.input.384629106" superClass="cdt.managedbuild.tool.gnu.cpp.compiler.input"/>
 							</tool>
 							<tool id="cdt.managedbuild.tool.gnu.c.compiler.mingw.lib.debug.812286372" name="GCC C Compiler" superClass="cdt.managedbuild.tool.gnu.c.compiler.mingw.lib.debug">
