--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+/C++/Checkers-Chess-Cpp/.settings/
+
 /C++/Checkers-Chess-Cpp/Debug/
 /C++/Checkers-Chess-Cpp/Release/
 
@@ -6,6 +8,9 @@
 
 /C++/OpenGL_Test_Project/Debug/
 /C++/OpenGL_Test_Project/Release/
+
+/C++/OpenGL_Platformer/Debug/
+/C++/OpenGL_Platformer/Release/
 
 /C++/OpenGL_Tetris/Debug/
 /C++/OpenGL_Tetris/Release/
@@ -23,7 +28,10 @@
 /C++/Sphere/Release/
 
 /C++/TerminalGames-cpp/Debug/
+/C++/TerminalGames-cpp/Default/
 /C++/TerminalGames-cpp/Release/
+/C++/TerminalGames-cpp/exe/
+/C++/TerminalGames-cpp/obj/
 
 /C++/TurnBasedStrategy/Debug/
 /C++/TurnBasedStrategy/Release/
